test_suite/tests/ui/fail/unspecified_fn_arg/unknown_option.rs
use clapi::macros::*;

#[command]
#[option(x)]
fn echo(times: i64){}

fn main(){}