test_suite/tests/ui/fail/unspecified_fn_arg/unknown_option.stderr
error: custom attribute panicked
 --> $DIR/unknown_option.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: argument `x` is no defined in `fn echo`
